cmake_minimum_required(VERSION 2.8 FATAL_ERROR)
project(PROJECT)
find_package(PCL 1.8 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(map_and_ground map_and_ground.cpp)
target_link_libraries(map_and_ground ${PCL_LIBRARIES})
